--- a/pages/styles.css
+++ b/pages/styles.css
@@ -136,6 +136,35 @@ textarea {
   width: 100%;
 }
 
+.prompt-strat-buttons {
+  display: flex;
+  place-content: center;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 auto;
+  flex-flow: row nowrap;
+  gap: 12px;
+  height: min-content;
+  overflow: hidden;
+  padding: 0px;
+  position: relative;
+  width: 100%;
+}
+.prompt-buttons-pitch {
+  display: flex;
+  place-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  flex: 0 0 auto;
+  flex-flow: row nowrap;
+  gap: 12px;
+  height: min-content;
+  overflow: hidden;
+  padding: 0px;
+  position: relative;
+  width: 100%;
+}
+
 .key-stroke {
   outline: none;
   display: flex;
@@ -188,8 +217,30 @@ textarea {
 
 .generate-button-pitch {
   color: white;
+
   place-content: flex-start;
   align-items: flex-start;
+  background-color: transparent;
+  border: 4px solid white;
+  border-radius: 100px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: min-content;
+  overflow: hidden;
+  padding: 12px 18px;
+  position: relative;
+  text-decoration: none;
+  width: min-content;
+  will-change: transform;
+  cursor: pointer;
+}
+.generate-button-strat {
+  color: white;
+  place-content: flex-start;
+  float: center;
+  align-items: center;
   background-color: transparent;
   border: 4px solid white;
   border-radius: 100px;
@@ -345,6 +396,30 @@ textarea {
   color: rgba(255, 255, 255, 0.5);
 }
 
+select {
+  font-size: 15px;
+  color: black;
+  padding: 12px;
+  width: 200px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 0.5);
+
+  background-color: transparent;
+  border: 4px solid white;
+  border-radius: 25px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none;
+  width: min-content;
+  will-change: transform;
+  cursor: pointer;
+}
+
 @media (min-width: 810px) and (max-width: 1199px) {
   .container {
     max-width: 600px;
@@ -397,6 +472,9 @@ textarea {
   }
 
   .prompt-buttons {
+    justify-content: center;
+  }
+  .prompt-buttons-pitch {
     justify-content: center;
   }
 
