--- a/pages/styles.css
+++ b/pages/styles.css
@@ -295,7 +295,6 @@ textarea {
   border-right-width: 1px;
   border-style: solid;
   border-top-width: 1px;
-  background-color: rgb(0, 0, 0);
   border-radius: 54.3478% / 238.095%;
   filter: grayscale(1);
   transform: none;
@@ -398,7 +397,6 @@ textarea {
 
 select {
   font-size: 15px;
-  color: black;
   padding: 12px;
   width: 200px;
   border-radius: 5px;
@@ -419,6 +417,10 @@ select {
   will-change: transform;
   cursor: pointer;
 }
+option {
+  color: white;
+}
+/* header animation */
 
 @media (min-width: 810px) and (max-width: 1199px) {
   .container {
